# CLI-BMI-python

./: README.md  main.py  pyproject.toml  test.py
